--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidKotlin5_6pmOnline</string>
+    <string name="click">Click</string>
+    <string name="hello">Hello World</string>
+    <string name="relative">Relative Activity</string>
 </resources>
