--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,15 @@
     <string name="change_app_color_mode">Change App Mode</string>
     <string name="dark_mode">Dark Mode</string>
     <string name="light_mode">Light Mode</string>
+    <string name="address_not_found">Address not found</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
     <string-array name="spinner_list">
         <item name="select item">Select Gender</item>
         <item name="male">Male</item>
         <item name="female">Female</item>
         <item name="other">Other</item>
+
+
     </string-array>
 </resources>
